new endpoint (developer_stats/{developer_name})
